--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,600&family=Roboto+Slab:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
